# server/app/Models/Post.php
@@ -6,6 +6,7 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Support\Str;
 
@@ -81,6 +82,13 @@ class Post extends Model
             $this->likes()->detach($user);
             $this->dislikes()->attach($user);
         }
+    }
+
+    // A post has many root comments
+    /** @return HasMany<PostComment, $this> */
+    public function comments(): HasMany
+    {
+        return $this->hasMany(PostComment::class)->whereNull('parent_id')->orderBy('created_at', 'DESC');
     }
 
     // Search by a query
